deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: noryx
---
apiVersion: v1
kind: Namespace
metadata:
  name: noryx-loads
